src/styles/global.scss
.highlight {
  background-color: #bee5f3;
  padding: 1px 4px;
  border-radius: 4px;
}

body {
  margin: 0;
}

text {
  font-family: sans-serif;
  font-size: 16px;
}

button {
  color: #000;
}

h1 {
  margin: 0;
  font-family: sans-serif;
}

h2 {
  margin: 0;
  font-family: sans-serif;
  font-weight: normal;
  color: #8c8c8c;
  line-height: 1.2;
}

/* small screens */
@media (max-width: 860px) {
  h1 {
    font-size: 20px;
  }

  h2 {
    font-size: 18px;
  }
}

/* big screens */
@media (min-width: 861px) {
  h1 {
    font-size: 24px;
  }

  h2 {
    font-size: 20px;
  }
}

